Fixed virtual scrolling  - Div height must be bound to 100%  - Overflow must be set to auto (or potentially scroll, but auto is probably better)  - Nested the div in another div (not sure why this is necessary, but it worked
potential changes - generates warnings because vs-repeat expects the div
to be bigger than it is, is there a way to pass it a height of 100%?

--- a/com.mobi.web/src/main/resources/public/modules/ontology-editor/directives/savedChangesTab/savedChangesTab.scss
+++ b/com.mobi.web/src/main/resources/public/modules/ontology-editor/directives/savedChangesTab/savedChangesTab.scss
@@ -6,27 +6,32 @@
         .block-header {
             border: 0;
         }
-
-        .block-content .property-values {
-            &:first-child {
-                margin-top: 0;
-            }
-
-            .value-container {
-                &:hover {
-                    background-color: #fff;
+        
+        .block-content .changes {
+            overflow: auto;
+            height: 100%;
+            
+            .property-values {
+                &:first-child {
+                    margin-top: 0;
                 }
-
-                .checkbox {
-                    margin: 0;
-
-                    label {
+                
+                .value-container {
+                    &:hover {
+                        background-color: #fff;
+                    }
+                    
+                    .checkbox {
                         margin: 0;
-                        padding: 0;
-
-                        input {
+                        
+                        label {
                             margin: 0;
-                            position: relative;
+                            padding: 0;
+                            
+                            input {
+                                margin: 0;
+                                position: relative;
+                            }
                         }
                     }
                 }
